[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobauto2-benders"
version = "0.1.0"
description = "Benders decomposition framework for the MobAuto2 project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fabio", email = "" }]
license = { file = "LICENSE" }
keywords = ["benders", "decomposition", "optimization", "mobauto2"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = ""

[project.scripts]
mobauto2-benders = "mobauto2_benders.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

